# MLOps_HW1

./: Dockerfile  README.md  Untitled.ipynb  app.py  database_utils.py  kostili_description.txt  main.py  postgres_init.txt  pshell.ps1  pshell.ps1 — ярлык.lnk  pyproject.toml  test.json  test2.json  testAPI.sh  testAPI_2.sh  testAPI_3.sh  testAPI_4.sh  testdocker.py  trainable_models.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
almost_system_tests/: 4_test_both_predict.sh  5_test_delete.sh  test1.json  test2.json  test4.json
almost_system_tests/.ipynb_checkpoints/: Tests_generation-checkpoint.ipynb
database/PG_15_202209061/16399/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13367  13367_fsm  13367_vm  13372  13372_fsm  13372_vm  13376  13377  13377_fsm  13377_vm  13382  13382_fsm  13382_vm  13386  174  175  2187  2224  2228  2337  24604  24605  24606  24607  24608  2579  2600  2600_fsm  (+192 more)
models/: 2022-10-25_GLM_0.pkl  2022-10-30_OLS_2.pkl  2022-10-30_OLS_6.pkl  2022-10-30_tree_5.pkl  2022-11-05_OLS_0.pkl  2022-11-05_tree_1.pkl  2022-12-18_tree_1.pkl
tests/: 1_test_modlist.sh  2_test_linreg_no_hyper.sh  3_test_tree_hyper.sh  4_test_both_predict.sh  5_test_delete.sh  6_test_refit_tree.sh  test3.json  test4.json
unit_tests/: test_models.py  utils.py
