[tool.poetry]
name = "hw1"
version = "0.1.0"
description = "MLOps HW1 solution"
authors = ["Kirill <kdergachev1062@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
numpy = "^1.23.4"
pandas = "^1.5.0"
statsmodels = "^0.13.2"
sklearn = "^0.0"
pygam = "^0.8.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
